--- a/assets/style.css
+++ b/assets/style.css
@@ -4,9 +4,11 @@ body {
   display: flex;
   justify-content: center;
   /* align-items: center;  */
-  height: 100vh; 
+  /* height: 100vh;  */
   /* margin: 0; */
   margin-top: 3%;
   padding: 0;
   
 }
+
+
