--- a/pages/style.css
+++ b/pages/style.css
@@ -2,13 +2,14 @@ body {
   background-color: #E8E8E8;
   font-family: Montserrat, arial;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  /* align-items: center;  */
+  align-items: center;
   /* height: 100vh;  */
   /* margin: 0; */
   margin-top: 3%;
   padding: 0;
-  
+  text-decoration: none;
 }
 
 
